  (Jacques-Henri Jourdan, review by Gabriel Scherer)

### Standard library:

- #2262: take precision (.<n>) and flags ('+' and ' ') into account
  in printf %F
  (Pierre Roux, review by Gabriel Scherer)

- #6148, #8596: optimize some buffer operations
  (Damien Doligez, reports by John Whitington and Alain Frisch,
   review by Jeremy Yallop and Gabriel Scherer)

### Other libraries:

* #2318: Delete the graphics library. This library is now available
  as a separate "graphics" package in opam. Its new home is:
  https://github.com/ocaml/graphics
  (Jérémie Dimino, review by Nicolas Ojeda Bar, Xavier Leroy and
   Sébastien Hinderer)

* #2289: Delete the vmthreads library. This library was deprecated in 4.08.0.
  (Jérémie Dimino)

- #2112: Fix Thread.yield unfairness with busy threads yielding to each
  other.
  (Andrew Hunter, review by Jacques-Henri Jourdan, Spiros Eliopoulos, Stephen
  Weeks, & Mark Shinwell)

- #7903, #2306: Make Thread.delay interruptible by signals again
  (Xavier Leroy, review by Jacques-Henri Jourdan and Edwin Török)

- #2248: Unix alloc_sockaddr: Fix read of uninitialized memory for an
  unbound Unix socket. Add support for receiving abstract (Linux) socket paths.
  (Tim Cuthbertson, review by Sébastien Hinderer and Jérémie Dimino)

- #2165: better unboxing heuristics for let-bound identifiers
  (Alain Frisch, review by Vincent Laviron and Gabriel Scherer)

### Compiler user-interface and warnings:

* #2276: Remove support for compiler plugins and hooks (also adds
  [Dynlink.unsafe_get_global_value])
  (Mark Shinwell, Xavier Clerc, review by Nicolás Ojeda Bär,
  Florian Angeletti, David Allsopp and Xavier Leroy)

- #2301: Hint on type error on int literal
  (Jules Aguillon, review by Nicolás Ojeda Bär , Florian Angeletti,
  Gabriel Scherer and Armaël Guéneau)

* #2314: Remove support for gprof profiling.
  (Mark Shinwell, review by Xavier Clerc and Stephen Dolan)

- #2190: fix pretty printing (using Pprintast) of "lazy ..." patterns and