@@ -29,71 +29,73 @@ C
 f
  92 93 94 95 96 97 98 99 100 101 102 103 104 105 106
 F
- 107 108 109 110 111 112 113 114 115 116 117 118
+ 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122
+#F
+ 123 124 125 126 127 128 129 130 131 132 133 134 135 136
 h
- 119 120 121 122 123 124 125 126 127 128 129 130 131
+ 137 138 139 140 141 142 143 144 145 146 147 148 149
 H
- 132 133 134 135 136 137 138 139 140 141 142 143 144
+ 150 151 152 153 154 155 156 157 158 159 160 161 162
 e
- 145 146 147 148 149 150 151 152 153 154 155 156 157 158
+ 163 164 165 166 167 168 169 170 171 172 173 174 175 176
 E
- 159 160 161 162 163 164 165 166 167 168 169 170 171 172
+ 177 178 179 180 181 182 183 184 185 186 187 188 189 190
 g
- 173 174 175 176 177 178 179 180 181
+ 191 192 193 194 195 196 197 198 199
 G
- 182 183 184 185 186 187 188 189 190
+ 200 201 202 203 204 205 206 207 208
 B
- 191 192 193 194
+ 209 210 211 212
 ld/li positive
- 195 196 197 198 199 200 201
+ 213 214 215 216 217 218 219
 ld/li negative
- 202 203 204 205 206 207 208
+ 220 221 222 223 224 225 226
 lu positive
- 209 210 211 212 213
+ 227 228 229 230 231
 lu negative
- 214
+ 232
 lx positive
- 215 216 217 218 219 220
+ 233 234 235 236 237 238
 lx negative
- 221
+ 239
 lX positive
- 222 223 224 225 226 227
+ 240 241 242 243 244 245
 lx negative
- 228
+ 246
 lo positive
- 229 230 231 232 233 234
+ 247 248 249 250 251 252
 lo negative
- 235
+ 253
 Ld/Li positive
- 236 237 238 239 240
+ 254 255 256 257 258
 Ld/Li negative
- 241 242 243 244 245
+ 259 260 261 262 263
 Lu positive
- 246 247 248 249 250
+ 264 265 266 267 268
 Lu negative
- 251
+ 269
 Lx positive
- 252 253 254 255 256 257
+ 270 271 272 273 274 275
 Lx negative
- 258
-LX positive
- 259 260 261 262 263 264
-Lx negative
- 265
-Lo positive
- 266 267 268 269 270 271
-Lo negative
- 272
-a
- 273
-t
- 274
-{...%}
- 275
-(...%)
  276
+LX positive
+ 277 278 279 280 281 282
+Lx negative
+ 283
+Lo positive
+ 284 285 286 287 288 289
+Lo negative
+ 290
+a
+ 291
+t
+ 292
+{...%}
+ 293
+(...%)
+ 294
 ! % @ , and constants
- 277 278 279 280 281 282 283
+ 295 296 297 298 299 300 301
 end of tests
 
 All tests succeeded.
