@@ -295,6 +295,10 @@ OCaml 4.09.0 (19 September 2019):
   (Damien Doligez, reports by John Whitington and Alain Frisch,
    review by Jeremy Yallop and Gabriel Scherer)
 
+- #8651: add '%#F' modifier in printf to output OCaml float constants
+  in hexadecimal
+  (Pierre Roux, review by Gabriel Scherer and Xavier Leroy)
+
 ### Other libraries:
 
 * #2318: Delete the graphics library. This library is now available
